--- a/app/src/main/res/layout/fragment_live_lesson_creation.xml
+++ b/app/src/main/res/layout/fragment_live_lesson_creation.xml
@@ -158,7 +158,7 @@
                     android:layout_width="0dp"
                     android:background="@null"
                     android:hint="@string/please_set"
-                    android:textColorHint="@color/font_light_gray"
+                    android:textColorHint="@color/subject_selected_blue"
                     android:textColor="@color/font_create_lesson_content"
                     android:layout_marginRight="@dimen/px20"
                     style="@style/LessonText"
@@ -358,7 +358,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/please_set"
                     android:textColor="@color/font_create_lesson_content"
-                    android:textColorHint="@color/font_light_gray"
+                    android:textColorHint="@color/subject_selected_blue"
                     style="@style/LessonText"
                     android:inputType="number"
                     android:maxLength="3"
