--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -25,7 +25,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_26px"
-                    android:drawableLeft="@drawable/ic_teaching"
+                    android:drawableLeft="@drawable/ic_my_class"
                     android:drawablePadding="@dimen/px20"
                     android:text="@string/my_teaching"/>
 
@@ -40,80 +40,6 @@
 
             <ImageView
                     android:id="@+id/enter_my_teaching"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_entrance"/>
-        </RelativeLayout>
-
-
-        <View
-                style="@style/DividerHorizontal"/>
-
-        <!--我报的名-->
-        <RelativeLayout
-                android:id="@+id/my_enrollment_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/MinePageItem">
-
-            <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font_black"
-                    android:textSize="@dimen/font_26px"
-                    android:drawableLeft="@drawable/ic_my_class"
-                    android:drawablePadding="@dimen/px20"
-                    android:text="@string/my_enrollment"/>
-
-            <TextView
-                    android:id="@+id/my_enrollment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/enter_my_enrollment"
-                    android:textColor="@color/font_black"
-                    android:textSize="@dimen/font_26px"
-                    android:layout_marginRight="@dimen/px20"/>
-
-            <ImageView
-                    android:id="@+id/enter_my_enrollment"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_entrance"/>
-        </RelativeLayout>
-
-        <View
-                style="@style/DividerHorizontal"/>
-
-        <RelativeLayout
-                android:id="@+id/my_contact_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/MinePageItem">
-
-            <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/font_black"
-                    android:textSize="@dimen/font_26px"
-                    android:drawableLeft="@drawable/ic_my_contact"
-                    android:drawablePadding="@dimen/px20"
-                    android:text="@string/my_contact"/>
-
-            <TextView
-                    android:id="@+id/my_contact"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/enter_my_contact"
-                    android:textColor="@color/font_black"
-                    android:textSize="@dimen/font_26px"
-                    android:layout_marginRight="@dimen/px20"/>
-
-            <ImageView
-                    android:id="@+id/enter_my_contact"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -153,6 +79,80 @@
 
             <ImageView
                     android:id="@+id/enter_my_document"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_entrance"/>
+        </RelativeLayout>
+
+
+        <View
+                style="@style/DividerHorizontal"/>
+
+        <!--我报的名-->
+        <!--<RelativeLayout-->
+                <!--android:id="@+id/my_enrollment_layout"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--style="@style/MinePageItem">-->
+
+            <!--<TextView-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textColor="@color/font_black"-->
+                    <!--android:textSize="@dimen/font_26px"-->
+                    <!--android:drawableLeft="@drawable/ic_my_class"-->
+                    <!--android:drawablePadding="@dimen/px20"-->
+                    <!--android:text="@string/my_enrollment"/>-->
+
+            <!--<TextView-->
+                    <!--android:id="@+id/my_enrollment"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_toLeftOf="@+id/enter_my_enrollment"-->
+                    <!--android:textColor="@color/font_black"-->
+                    <!--android:textSize="@dimen/font_26px"-->
+                    <!--android:layout_marginRight="@dimen/px20"/>-->
+
+            <!--<ImageView-->
+                    <!--android:id="@+id/enter_my_enrollment"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:src="@drawable/ic_entrance"/>-->
+        <!--</RelativeLayout>-->
+
+        <!--<View-->
+                <!--style="@style/DividerHorizontal"/>-->
+
+        <RelativeLayout
+                android:id="@+id/my_contact_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/MinePageItem">
+
+            <TextView
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/font_26px"
+                    android:drawableLeft="@drawable/ic_my_contact"
+                    android:drawablePadding="@dimen/px20"
+                    android:text="@string/my_contact"/>
+
+            <TextView
+                    android:id="@+id/my_contact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/enter_my_contact"
+                    android:textColor="@color/font_black"
+                    android:textSize="@dimen/font_26px"
+                    android:layout_marginRight="@dimen/px20"/>
+
+            <ImageView
+                    android:id="@+id/enter_my_contact"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -346,7 +346,8 @@
 
 
         <View
-                style="@style/DividerHorizontal"/>
+                style="@style/DividerHorizontal"
+                android:visibility="gone"/>
 
         <!--小教室下载二维码-->
         <RelativeLayout
@@ -354,7 +355,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/MinePageItem"
-                android:layout_marginBottom="@dimen/px185">
+                android:layout_marginBottom="@dimen/px185"
+                android:visibility="gone">
 
             <TextView
                     android:layout_alignParentLeft="true"
