--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
             android:orientation="vertical"
-       192     android:layout_width="match_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <include layout="@layout/layout_personal_info"/>
