班和公开课

--- a/app/src/main/res/layout/activity_search_class.xml
+++ b/app/src/main/res/layout/activity_search_class.xml
@@ -86,13 +86,21 @@
     </FrameLayout>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/recyclerview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:scrollbars="none"-->
+        <!--/>-->
+
+    <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshSwipeListView
+        android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
-        />
-
+        android:divider="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
+        android:orientation="vertical"/>
 
 </LinearLayout>
 
