--- a/app/src/main/res/layout/fragment_public_lesson.xml
+++ b/app/src/main/res/layout/fragment_public_lesson.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/main_bg"
+    android:orientation="vertical">
 
-    <include layout="@layout/layout_my_course_search"/>
+    <include layout="@layout/layout_my_course_search" />
 
     <View
-            android:id="@+id/filter_line"
-            style="@style/DividerHorizontal"/>
+        android:id="@+id/filter_line"
+        style="@style/DividerHorizontal" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/over_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
