--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -2,7 +2,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/classroom_white_bg">
 
     <!--播放模式-->
@@ -51,6 +51,19 @@
             android:layout_height="match_parent">
 
     </FrameLayout>
+
+    <TextView
+            android:id="@+id/no_net_work_tips"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/socket_error_connect"
+            android:textColor="@color/font_dark_gray"
+            android:textSize="@dimen/font_28px"
+            android:gravity="center"
+            android:visibility="gone"
+            android:paddingLeft="@dimen/px100"
+            android:paddingRight="@dimen/px100">
+    </TextView>
 
 </FrameLayout>
 
