--- a/app/src/main/res/layout/activity_create_timetable.xml
+++ b/app/src/main/res/layout/activity_create_timetable.xml
@@ -108,7 +108,8 @@
                     android:textColor="@color/radio_tips"
                     android:textSize="@dimen/font_26px"
                     android:text="@string/video_auto_repaly_tips"
-                    android:layout_marginLeft="@dimen/px64"/>
+                    android:layout_marginLeft="@dimen/px64"
+                    android:layout_marginBottom="@dimen/px33"/>
 
 
 
