保存jpeg时，去掉插入数据库逻辑代码

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -355,6 +355,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/MinePageItem"
+                android:layout_marginBottom="@dimen/px120"
                 android:visibility="visible">
 
             <TextView
