--- a/app/src/main/res/layout/fragment_public_lesson.xml
+++ b/app/src/main/res/layout/fragment_public_lesson.xml
@@ -22,4 +22,11 @@
         android:layout_below="@+id/filter_line"
         />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/load_state_container"
+        android:layout_below="@+id/filter_line"
+        />
+
 </RelativeLayout>
