--- a/app/src/main/res/layout/fragment_class_schedule_tab_mode.xml
+++ b/app/src/main/res/layout/fragment_class_schedule_tab_mode.xml
@@ -19,7 +19,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="全部 0"
+            android:text="全部"
             android:gravity="center"
             android:background="@drawable/selector_line_bottom_orange"
             android:textSize="@dimen/font_32px"
@@ -31,7 +31,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="待上课 0"
+            android:text="待上课"
             android:gravity="center"
             android:background="@drawable/selector_line_bottom_orange"
             android:drawableBottom="@color/main_orange"
@@ -47,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="上课中 0"
+            android:text="上课中"
             android:gravity="center"
             android:drawableBottom="@color/main_orange"
             android:layout_marginLeft="10dp"
@@ -63,7 +63,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:text="已完课 0"
+            android:text="已完课"
             android:gravity="center"
             android:textSize="@dimen/font_32px"
             android:textColor="@color/selector_btn_orange_black"
