--- a/app/src/main/res/layout/item_home_no_class.xml
+++ b/app/src/main/res/layout/item_home_no_class.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:background="@color/gray_item_bg"
+    android:background="@drawable/ic_bg_no_class"
     android:layout_height="@dimen/px550">
 
     <TextView
