--- a/app/src/main/res/layout/activity_class_info.xml
+++ b/app/src/main/res/layout/activity_class_info.xml
@@ -165,13 +165,17 @@
 
             <TextView
                     style="@style/LiveLessonCreateTitle"
-                    android:text="@string/join_type"/>
+                    android:text="@string/join_type"
+                    android:layout_weight="1.0"/>
 
-            <TextView
-                    android:id="@+id/join_veri"
-                    style="@style/LiveLessonRightEntrance"
-                    android:drawableRight="@null"
-                    />
+            <ToggleButton
+                    android:id="@+id/veri_switcher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/toggle_btn_selector"
+                    android:textOff=""
+                    android:textOn=""/>
+
         </LinearLayout>
 
         <Button
