--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -139,7 +139,7 @@
     </string-array>
 
     <string-array name="add_menu2">
-        <item>公开开课</item>
+        <item>开公开课</item>
         <item>开班</item>
     </string-array>
     
