--- a/app/src/main/res/layout/item_home_classes_label.xml
+++ b/app/src/main/res/layout/item_home_classes_label.xml
@@ -19,7 +19,10 @@
             android:layout_height="wrap_content"
             android:text="我的班"
             android:textSize="@dimen/font_28px"
-            android:textColor="@color/chocolate_light"
+            android:drawableLeft="@drawable/shape_line_vertical_orange"
+            android:drawablePadding="@dimen/px13"
+            android:gravity="center_vertical"
+            android:textColor="@color/font_black"
             />
 
         <TextView
