--- a/app/src/main/res/layout/layout_classroom_contact_item.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_item.xml
@@ -39,11 +39,14 @@
             android:lines="1"
             android:ellipsize="end"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/portrait"/>
+            android:layout_toRightOf="@+id/portrait"
+            />
 
     <TextView
             android:id="@+id/label"
-            android:textColor="@color/font_orange"
+            android:textColor="@color/font_white"
+            android:background="@drawable/bg_orange_rect"
+            android:padding="2dp"
             android:lines="1"
             android:ellipsize="end"
             android:textSize="@dimen/font_20px"
@@ -51,7 +54,25 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/px10"
-            android:layout_toRightOf="@+id/name"/>
+            android:layout_toRightOf="@+id/name"
+            android:visibility="gone"
+            />
+
+    <TextView
+            android:id="@+id/label_second"
+            android:textColor="@color/font_white"
+            android:background="@drawable/bg_orange_rect"
+            android:padding="2dp"
+            android:lines="1"
+            android:ellipsize="end"
+            android:textSize="@dimen/font_20px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/px10"
+            android:layout_toRightOf="@+id/label"
+            android:visibility="gone"
+            />
 
     <cn.xiaojs.xma.ui.widget.MessageImageView
             android:id="@+id/talk"
